--- a/includes/index.html
+++ b/includes/index.html
@@ -2,44 +2,41 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>Discover
-									London</h2>
-									<p>This website is a concise travel Guide to London and provides the latest information regarding places to visit in the city and makes exploring London
-										#
-										#easier and more convenient for you.</p>
-								</header>
-								<a href="#" class="image main postcard"><img src="images/main/london1.png" alt="" /></a>
-								
-							</article>
-						
+						<article class="post featured">
+							<header class="major">
+								<h2>Discover
+								London</h2></header>
+								<p>This website is a concise travel Guide to London and provides the latest information regarding places to visit in the city and makes exploring London easier and more convenient for you.</p>
+
+							<a href="#" class="image main postcard"><img src="images/main/london1.png" alt="" /></a>
+
+						</article>
+
 						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>More London</h2>
-									<p>London is the capital of England and is the most populous city of the United Kingdom. London is a leading global city in education, finance, fashion, media, health care, transportation and many other things. It is the world’s most visited city and has the world’s largest city airport system. London has a hugely diverse range of people and cultures, with more than 300 languages spoken around the city.</p>
-									<p>There are endless activities to see when you visit London from tourist attractions like the London Eye to bus tours. Everything is easily accessed and all activities will give more insight to diverse city. The multi cultural city has every to offer and you will find that there isn't enough hours in a day to do everything. It is recommended to plan and book early to ensure you don't miss out</p>
-								</header>
-								<a href="#" class="image main postcards"><img src="images/main/london2.png" alt="" /></a>
-								
-								
-								<!-- Reviews -->
+						<article class="post featured">
+							<header class="major">
+								<h2>More London</h2></header>
+								<p>London is the capital of England and is the most populous city of the United Kingdom. London is a leading global city in education, finance, fashion, media, health care, transportation and many other things. It is the world’s most visited city and has the world’s largest city airport system. London has a hugely diverse range of people and cultures, with more than 300 languages spoken around the city.</p>
+								<p>There are endless activities to see when you visit London from tourist attractions like the London Eye to bus tours. Everything is easily accessed and all activities will give more insight to diverse city. The multi cultural city has every to offer and you will find that there isn't enough hours in a day to do everything. It is recommended to plan and book early to ensure you don't miss out</p>
+
+							<a href="#" class="image main postcards"><img src="images/main/london2.png" alt="" /></a>
+
+
+							<!-- Reviews -->
 							<h2>Reviews</h2>
 
 							<!-- Review 1 -->
 							<article class="review">
 								<h4>Sean Johnson, Mictham</h4>
 								<img src="images/main/male.png" alt="Reviewer 1" class="review_image">
-								<p><q>London has changed alot over the years but I like the mix of people and cultures</q> </p>
+								<p><span class="fa fa-quote-left" style="font-size:20px; margin:10px;"></span>London has changed alot over the years but I like the mix of people and cultures.</p>
 							</article>
 
 							<!-- Review 2 -->
 							<article class="review">
 								<h4>Kim Chambers, Bromley</h4>
 								<img src="images/main/female.png" alt="Reviewer 2" class="review_image">
-								<p><q>One of the greatest city in the world</q></p>
+								<p><span class="fa fa-quote-left" style="font-size:20px; margin:10px;"></span>One of the greatest city in the world.</p>
 							</article>
-								
-							</article>
+						</article>
 					</div>
