--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
-
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great:300,400,500,600");
 /*
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -73,6 +73,14 @@ input, select, textarea {
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	appearance: none;
+}
+
+.tip > div { padding: 0px; }
+
+.tip p { margin: 0px; }
+
+.tip img {
+	width: 20%;
 }
 
 /* Basic */
@@ -153,7 +161,7 @@ input, select, textarea {
 	body, input, select, textarea {
 		font-family: "Merriweather", Georgia, serif !important;
 		font-weight: 300;
-		font-size: 1rem;
+		font-size: 16px;
 		line-height: 2.375;
 	}
 
@@ -184,7 +192,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "Source Sans Pro", Helvetica, sans-serif !important;
+		font-family: "Fredericka The Great", "Source Sans Pro", Helvetica, sans-serif !important;
 		font-weight: 900;
 		line-height: 1.5;
 		letter-spacing: 0.075em;
@@ -211,12 +219,14 @@ input, select, textarea {
 	}
 
 	h3 {
-		font-size: 1.25rem;
+		font-size: 1.15rem;
 		margin: 0 0 1.5rem 0;
+		color: #3f3f3f !important;
 	}
 
 	h4 {
 		font-size: 1rem;
+		color: #3f3f3f !important;
 	}
 
 	h5 {
@@ -325,6 +335,12 @@ input, select, textarea {
 	hr {
 		border-bottom-color: #eeeeee;
 	}
+
+
+	.container-narrow { 
+		padding-left: 40px;
+		padding-right: 40px;
+		}
 
 /* Row */
 
@@ -2373,17 +2389,17 @@ input, select, textarea {
 				}
 
 	dl {
-		margin: 0 0 2rem 0;
+		margin: 1rem 0 2rem 0;
 	}
 
 		dl dt {
 			display: block;
 			font-weight: 600;
-			margin: 0 0 1rem 0;
+			margin: 0 0 0.6rem 0;
 		}
 
 		dl dd {
-			margin-left: 2rem;
+			margin-left: 0.7rem;
 		}
 
 	ul.divided li {
@@ -2823,7 +2839,7 @@ input, select, textarea {
 		#intro a {
 			color: #ffffff;
 			border-bottom-color: rgba(255, 255, 255, 0.5);
-			padding: 10px;
+			padding: 10px 15px;
 			border-radius: 100%;
 			width: 40px;
 		}
@@ -2896,7 +2912,7 @@ input, select, textarea {
 				}
 
 		#intro h1 {
-			font-size: 5rem;
+			font-size: 3.5rem;
 			line-height: 1;
 		}
 
@@ -3135,7 +3151,7 @@ input, select, textarea {
 		padding: 0 2rem 0 0;
 		position: relative;
 		width: calc(100% - 4rem);
-		max-width: 72rem;
+		max-width: 88rem;
 		z-index: 2;
 	}
 
@@ -3274,7 +3290,7 @@ input, select, textarea {
 		position: relative;
 		margin: 0 auto;
 		width: calc(100% - 4rem);
-		max-width: 72rem;
+		max-width: 88rem;
 		z-index: 2;
 	}
 
@@ -3293,7 +3309,7 @@ input, select, textarea {
 		}
 
 		#main > .post {
-			padding: 6rem 6rem 0rem 6rem ;
+			padding: 6rem 6rem 5rem 6rem ;
 		}
 
 			#main > .post header.major > .date {
@@ -3301,7 +3317,7 @@ input, select, textarea {
 			}
 
 			#main > .post header.major > h1, #main > .post header.major h2 {
-				font-size: 4rem;
+				font-size: 3rem;
 				line-height: 1.1;
 				margin: 0 0 2rem 0;
 			}
@@ -3328,7 +3344,7 @@ input, select, textarea {
 				border: 1px solid #ccc;
 				border-radius: 10px;
 				margin: 30px 0px;
-				padding: 30px 30px 20px 30px;
+				padding: 30px;
 			}
 
 			#main {
@@ -3364,10 +3380,7 @@ input, select, textarea {
 			}
 
 
-
-
-
-.places_image { width: 100%; }
+.places_image { width: 80%; }
 
 #activities {
 	background: url("../../images/main/bg.jpg") no-repeat !important; 
@@ -3442,9 +3455,6 @@ article { padding-bottom: 20px; }
 	position: relative;
 	margin-top: -12px;
 	width: 100%; }
-
-.w3-card footer { 
-	padding: 20px 10px 20px 10px; }
 
 .w3-card footer .w3-btn { 
 	width: 100%;
@@ -3540,7 +3550,7 @@ article { padding-bottom: 20px; }
 			@media screen and (max-width: 1280px) {
 
 				#main > .post {
-					padding: 4rem 4rem 0rem 4rem ;
+					padding: 4rem 4rem 4rem 4rem ;
 				}
 
 			}
@@ -3548,7 +3558,7 @@ article { padding-bottom: 20px; }
 			@media screen and (max-width: 736px) {
 
 				#main > .post {
-					padding: 2rem 2rem 0rem 2rem ;
+					padding: 3rem 2rem 3rem 2rem ;
 				}
 
 					#main > .post header.major > .date {
@@ -3700,7 +3710,7 @@ article { padding-bottom: 20px; }
 		position: relative;
 		margin: 0 auto;
 		width: calc(100% - 4rem);
-		max-width: 72rem;
+		max-width: 88rem;
 	}
 
 		#footer input, #footer select, #footer textarea {
@@ -4370,7 +4380,6 @@ article { padding-bottom: 20px; }
 			right: 0;
 			text-align: right;
 			top: 0;
-			vertical-align: middle;
 			width: 7rem;
 		}
 
@@ -4441,12 +4450,14 @@ article { padding-bottom: 20px; }
 
 	@media screen and (min-width: 300px) {
 
-		body { font-size: 16px !important; }
+		body { font-size: 16px; }
+
+		.tip img { 
+			width: 40%; }
+		
 	}
 
 	@media screen and (min-width: 600px) {
-
-		body { font-size: 18px !important; }
 		
 		.activity .w3-card {
 			width: 90%;
@@ -4460,8 +4471,16 @@ article { padding-bottom: 20px; }
 			margin: auto; }
 	}
 
-	@media screen and (min-width: 991px) {
 
-		html { font-size: 20px !important; }
+	@media screen and (min-width: 992px) {
+		
+		.featured { 
+			padding-left: 180px !important;
+			padding-right: 180px !important;
+		}
+
+		.tip img { 
+			margin-top: 20px;
+			width: 80%; }
 	}
 
