--- a/includes/travel.html
+++ b/includes/travel.html
@@ -1,61 +1,108 @@
-				<!-- Main -->
-					<div id="main">
+<!-- Main -->
+<div id="main">
 
-						<div class="w3-container main-content spacing">
-							<!-- Travel Tips -->
-							<h2>Top 5 Travel Tips</h2>
+	<div class="w3-container main-content spacing">
+		<!-- Travel Tips -->
+		<h2>Top 5 Travel Tips</h2>
 
-								<!-- Tip 1 -->
-								<article class="tip">
-									<h3>1. Get a Visitor Oyster card </h3>
-									<!-- Information taken from: https://tfl.gov.uk/travel-information/visiting-london/getting-around-london/visitor-information/top-travel-tips?intcmp=27765-->
-									<p>A Visitor Oyster card is a smartcard which uses pay as you go credit to allow
-									you to travel on most public transport in London. You can purchase one online and have it delivered 
-									to your home, making easy for you to travel without the extra hassle of queuing up to top up.</p>
+		<!-- Tip 1 -->
+		<div class="tip">
+			<div>
+				<article>
+				
+					<h3>1. Get a Visitor Oyster card </h3>
+					<!-- Information taken from: https://tfl.gov.uk/travel-information/visiting-london/getting-around-london/visitor-information/top-travel-tips?intcmp=27765-->
+					<p>A Visitor Oyster card is a smartcard which uses pay as you go credit to allow
+						you to travel on most public transport in London. You can purchase one online and have it
+						delivered
+						to your home, making easy for you to travel without the extra hassle of queuing up to top up.
+					</p>
 
-									<p>Pay as you go fares are cheaper than paying for for paper single tickets. 
-									It is also possible to use your contactless debit or credit card to pay as you go on London's public transport, 
-									although overseas transaction fees may apply.</p>
-								</article> <!-- End tip 1 -->
+					<p>Pay as you go fares are cheaper than paying for for paper single tickets.
+						It is also possible to use your contactless debit or credit card to pay as you go on London's
+						public
+						transport,
+						although overseas transaction fees may apply.</p>
+				</article> <!-- End tip 1 -->
+			</div>
+		</div>
 
-								<!-- Tip 2 -->
-								<article class="tip">
-									<h3>2. Keep your Oyster topped up </h3>
-									<p class="w3-margin-bottom tip-img">While your using your Oyster card, be sure to touch in and out at each journey. 
-									This done by placng your Oyster card over Oyster card reader. Each journey's fare is deducted from the your Oyster accordingly, 
-									most readers will display the amount deducted and th amount remaining on your Oyster card. </p>
-									<p>
-									Topping up is easy and can be done in most places showing an Oyster card to up sign. e.g Tube stations, local shops etc.</p>
-								</article> <!-- End tip 2 -->
+		<!-- Tip 2 -->
+		<div class="row tip">
+			<div>
+				<article>
+				
+					<h3>2. Keep your Oyster topped up </h3>
+					<p class="w3-margin-bottom tip-img">While your using your Oyster card, be sure to touch in and out
+						at each
+						journey.
+						This done by placng your Oyster card over Oyster card reader. Each journey's fare is deducted
+						from the
+						your Oyster accordingly,
+						most readers will display the amount deducted and th amount remaining on your Oyster card. </p>
+					<p>
+						Topping up is easy and can be done in most places showing an Oyster card to up sign. e.g Tube
+						stations,
+						local shops etc.</p>
+				</article> <!-- End tip 2 -->
+			</div>
+		</div>
 
-								<!-- Tip 3 -->
-								<article class="tip">
-									<!-- Information taken from: https://tfl.gov.uk/travel-information/visiting-london/getting-around-london/visitor-information/top-travel-tips?intcmp=27765-->
-									<h3>3. Travel times </h3>
-									<p>The busiest times to travel in London are:</p>
+		<!-- Tip 3 -->
+		<div class="row tip">
+			<div>
+				<article>
+				
+					<!-- Information taken from: https://tfl.gov.uk/travel-information/visiting-london/getting-around-london/visitor-information/top-travel-tips?intcmp=27765-->
+					<h3>3. Travel times </h3>
+					<p>The busiest times to travel in London are:</p>
 
-									<dl class="w3-padding-bottom">
-										<dt id="busy-days-of-week">Monday to Friday</dt>
-										<dd aria-labelledby="busy-days-of-week">Between 8:30 to 09:00 and 17:30 to 18:30.</dd>
-									</dl>
-									<p>If you are able to travel outside these times, you could enjoy a quicker, 
-									more comfortable journey, especially if you're carrying heavy luggage/a rucksack, or travelling in a group.</p>
-								</article> <!-- End tip 3 -->
+					<dl class="w3-padding-bottom">
+						<dt id="busy-days-of-week">Monday to Friday</dt>
+						<dd aria-labelledby="busy-days-of-week">Between 8:30 to 09:00 and 17:30 to 18:30.</dd>
+					</dl>
+					<p>If you are able to travel outside these times, you could enjoy a quicker,
+						more comfortable journey, especially if you're carrying heavy luggage/a rucksack, or travelling
+						in a
+						group.</p>
+				</article> <!-- End tip 3 -->
+			</div>
+		</div>
 
-								<!-- Tip 4 -->
-								<article class="tip">
-									<h3>4. Keep your property safe </h3>
-									<p class="w3-margin-bottom">If you decide to carry luggage on the London transport, be sure to keep all luggage and property close and in sight. Keep luggage on the floor close to your feet.
-									If you're carrying heavy luggage, try to avoid travelling during the busiest times; your journey may be easier and less confusing.</p>
-									<p>
-									Although staff will be present when using most services, they may not be able to assist you with luggage as a result of carrying out other duties. </p>
-								</article> <!-- End tip 4 -->
+		<!-- Tip 4 -->
+		<div class="row tip">
+			<div>
+				<article>
+					
+					<h3>4. Keep your property safe </h3>
+					<p class="w3-margin-bottom">If you decide to carry luggage on the London transport, be sure to keep
+						all
+						luggage and property close and in sight. Keep luggage on the floor close to your feet.
+						If you're carrying heavy luggage, try to avoid travelling during the busiest times; your journey
+						may be
+						easier and less confusing.</p>
+					<p>
+						Although staff will be present when using most services, they may not be able to assist you with
+						luggage
+						as a result of carrying out other duties. </p>
+				</article> <!-- End tip 4 -->
+			</div>
+		</div>
 
-								<!-- Tip 5 -->
-								<article class="tip">
-									<h3>5. Taxis and Minicabs</h3>
-									<p>Aside from public transport services, there are other alternatives to travelling around in London. Taxis and minicabs provide an additional convenience. 
-									These services are professionally licensed and vehicles providing such services will clearly displayed on the windows of the vehicle.</p>
-								</article>
-							</div>			
-						</div>
+		<!-- Tip 5 -->
+		<div class="row tip">
+			<div>
+				<article>
+					
+					<h3>5. Taxis and Minicabs</h3>
+					<p>Aside from public transport services, there are other alternatives to travelling around in
+						London. Taxis
+						and minicabs provide an additional convenience.
+						These services are professionally licensed and vehicles providing such services will clearly
+						displayed
+						on the windows of the vehicle.</p>
+				</article>
+			</div>
+		</div>
+	</div>
+</div>
